# glCapsViewer

./: .gitignore  CMakeLists.txt  README.md  capsGroup.cpp  capsGroup.h  capslist.xml  compressedTextureFormats.xml  enumList.xml  glCapsViewer.cpp  glCapsViewer.h  glCapsViewer.pro  glCapsViewer.qrc  glCapsViewer.rc  glCapsViewer.sln  glCapsViewer.ui  glCapsViewer.vcxproj  glCapsViewer.vcxproj.filters  glCapsViewerCapsGroup.cpp  glCapsViewerCapsGroup.h  glCapsViewerCore.cpp  glCapsViewerCore.h  glCapsViewerHttp.cpp  glCapsViewerHttp.h  internalFormatInfo.cpp  internalFormatInfo.h  internalFormatTarget.cpp  internalFormatTarget.h  main.cpp  missing_caps_by_extension.txt  readme.txt  resource.h  settings.cpp  settings.h  settingsDialog.cpp  settingsDialog.h  submitDialog.cpp  submitDialog.h  treeproxyfilter.cpp  treeproxyfilter.h
GeneratedFiles/: qrc_glcapsviewer.cpp  ui_glcapsviewer.h
Resources/: capslist.xml
